# slug_life-hurts

./: Cargo.toml
wix/: main.wxs
